--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: Han
 subtitle: 'Keep learning, Keep growing!'
-description: ''
-keywords:
+description: 'This is a private blog to record the new knowledge I gained from study and work, mainly about programming and EV.'
+keywords: programming, EV, electronic, embedded
 author: Carlo Han
 language: en
 timezone: ''
