--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Han
 subtitle: 'Keep learning, Keep growing!'
-description: 'This is a private blog to record the new knowledge I gained from study and work, mainly about programming and EV.'
+description: 'Keep learning, Keep growing!'
 keywords: programming, EV, electronic, embedded
 author: Carlo Han
 language: en
