--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: HAN
+title: HAN's BLOG
 subtitle: 'Keep learning, Keep growing!'
 description: ''
 keywords: programming, EV, electronic, embedded
