--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -410,7 +410,7 @@ github_banner:
 # ---------------------------------------------------------------
 
 font:
-  enable: false
+  enable: true
 
   # Uri of fonts host, e.g. https://fonts.googleapis.com (Default).
   host:
@@ -423,30 +423,30 @@ font:
   # Global font settings used for all elements inside <body>.
   global:
     external: true
-    family: Lato
-    size:
+    family: Roboto
+    size: 
 
   # Font settings for site title (.site-title).
   title:
     external: true
-    family:
-    size:
+    family: Permanent Marker
+    size: 1.5
 
   # Font settings for headlines (<h1> to <h6>).
   headings:
     external: true
-    family:
+    family: Montserrat
     size:
 
   # Font settings for posts (.post-body).
   posts:
     external: true
-    family:
+    family: Open Sans
 
   # Font settings for <code> and code blocks.
   codes:
     external: true
-    family:
+    family: Inconsolata
 
 
 # ---------------------------------------------------------------
@@ -568,7 +568,7 @@ comments:
   style: tabs
   # Choose a comment system to be displayed by default.
   # Available values: changyan | disqus | disqusjs | gitalk | livere | valine
-  active:
+  active: gitalk
   # Setting `true` means remembering the comment system selected by the visitor.
   storage: true
   # Lazyload all comment systems.
@@ -635,12 +635,12 @@ livere_uid: # <your_uid>
 # Gitalk
 # For more information: https://gitalk.github.io, https://github.com/gitalk/gitalk
 gitalk:
-  enable: false
-  github_id: # GitHub repo owner
-  repo: # Repository name to store issues
-  client_id: # GitHub Application Client ID
-  client_secret: # GitHub Application Client Secret
-  admin_user: # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
+  enable: true
+  github_id: CarloHan # GitHub repo owner
+  repo: blog-comments # Repository name to store issues
+  client_id: 35e74b12f2a8b1d3c54b # GitHub Application Client ID
+  client_secret: 53256928d665357ce7de250ec9a743c74ff087a5 # GitHub Application Client Secret
+  admin_user: CarloHan # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
   distraction_free_mode: true # Facebook-like distraction free mode
   # Gitalk's display language depends on user's browser or system environment
   # If you want everyone visiting your site to see a uniform language, you can set a force language value
