--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: HAN's BLOG
-subtitle: 'Keep learning, Keep growing!'
+subtitle: 'Keep studying, Keep growing!'
 description: ''
 keywords: programming, EV, electronic, embedded
 author: Carlo Han
